<resources>
    <string name="app_name">Descubre España</string>
    <string name="title_home">Mapa</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Cuenta de usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="boton_registro">Registrarse</string>
    <string name="boton_login">Iniciar sesión</string>
    <string name="cerrar_sesion_button">Cerrar sesión</string>
    <string name="reset_password_button">Olvidé mi contraseña</string>
    <string name="tv_info_basica">Información Básica:</string>
    <string name="tv_fecha">Fecha:</string>
    <string name="tv_categoria">Categoría:</string>
    <string name="tv_direccion">Dirección:</string>
    <string name="tv_accesibilidad">Accesibilidad:</string>
    <string name="tv_contacto">Contacto:</string>
    <string name="tv_enlace_info">Más información:</string>
    <string name="tv_puntuacion">Puntuación:</string>
    <string name="tv_horario">Horario:</string>
    <string name="tv_coste">Coste:</string>
    <string name="poi_sin_puntuacion">Aún no hay ninguna puntuación</string>
    <string name="boton_enviar_valoracion">Enviar valoración</string>
    <string name="boton_mas_info">Más información</string>
    <string name="boton_menos_info">Minimizar información</string>
    <string name="tv_loading_message">Cargando...</string>
    <string-array name="categorias">
        <item>Histórico</item>
        <item>Monumental</item>
        <item>Ocio</item>
    </string-array>
</resources>
