<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.iesquevedo.descubreespana.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detallePoi"
            app:destination="@id/detallePoi"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="es.iesquevedo.descubreespana.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="es.iesquevedo.descubreespana.ui.login.LoginFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/userAccountFragment"
        android:name="es.iesquevedo.descubreespana.ui.useraccount.UserAccountFragment"
        android:label="user_account_fragment"
        tools:layout="@layout/user_account_fragment" >
        <action
            android:id="@+id/action_userAccountFragment_to_navigation_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registroFragment"
        android:name="es.iesquevedo.descubreespana.ui.registro.RegistroFragment"
        android:label="RegistroFragment" />
    <fragment
        android:id="@+id/detallePoi"
        android:name="es.iesquevedo.descubreespana.ui.detalle_poi.DetallePoiFragment"
        android:label="detalle_poi_fragment"
        tools:layout="@layout/detalle_poi_fragment" >
        <argument
            android:name="puntoInteres"
            app:argType="es.iesquevedo.descubreespana.modelo.dto.PuntoInteresDtoGetMaestro" />
    </fragment>
</navigation>
