<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detalle_poi.DetallePoiFragment">

    <!-- PADRE -->
    <LinearLayout
        android:id="@+id/linealpadre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- .... PADRE FOTOS .... -->
        <LinearLayout
            android:id="@+id/linearAceptarEliminar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="Aceptar" />

            <Button
                android:id="@+id/btEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Eliminar" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager_galeria"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

            </androidx.viewpager2.widget.ViewPager2>

            <ImageButton
                android:id="@+id/btEditPoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00999999" />

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/viewPager_galeria"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"></me.relex.circleindicator.CircleIndicator3>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- ... FIN FOTOS ... -->


        <!-- ... LINEAR INFO ... -->
        <LinearLayout
            android:id="@+id/linealinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

                <TextView
                    android:id="@+id/textviewinfobasica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_info_basica"
                    android:padding="2dp"
                    android:textColor="#FF2D2D2D"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:maxLines="4"
                    android:id="@+id/detalles_infobasica"
                    android:padding="2dp"/>


                    <Button
                        android:id="@+id/mostrarMasInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/boton_mas_info"
                        android:padding="1dp"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:background="@color/colorPrimaryDark"/>


                <LinearLayout
                    android:id="@+id/linearpuntuacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewpuntuacion"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:text="@string/tv_puntuacion"
                        android:padding="3dp"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/rbValoracion"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:scaleX="0.6"
                            android:scaleY="0.6"
                            android:stepSize="0.01"
                            android:padding="0dp"
                            />
                        <TextView
                            android:id="@+id/detalles_puntuacion"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/poi_sin_puntuacion"
                            android:padding="3dp"/>

                        <Button
                            android:id="@+id/btValoraciones"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ver valoraciones">
                        </Button>


                    </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerValoraciones"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
            </androidx.recyclerview.widget.RecyclerView>


            <!-- LINEAL TEXTO -->
            <LinearLayout
                android:id="@+id/linealtexto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:id="@+id/linearfecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewfecha"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_fecha"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_fecha"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearcategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewcategoria"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_categoria"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_categoria"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lineardireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewdireccion"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_direccion"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_direccion"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearaccesibilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewaccesibilidad"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_accesibilidad"
                        android:padding="3dp"/>
                    <CheckBox
                        android:id="@+id/detalles_accesibilidad"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:padding="3dp"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearinfocontacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewinfocontacto"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_contacto"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_infocontacto"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearenlaceweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewenlaceweb"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_enlace_info"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_enlaceweb"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearhorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewhorario"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_horario"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_horario"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearcoste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textviewcoste"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:text="@string/tv_coste"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/detalles_coste"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                </LinearLayout>
            </LinearLayout><!-- FIN TEXTO -->
        </LinearLayout> <!-- FIN INFO -->
    </LinearLayout><!-- FIN PADRE -->
</ScrollView>